--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-bangladesh-2.0</title>
-    <!-- Css link -->
-    <link rel="stylesheet" href="CSS/style.css">
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+    <!-- Css link -->
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
@@ -20,13 +20,31 @@
     <header>
         <!-- This the nav -->
         <nav>
-            <h1 class="">Bangladesh 2.0</h1>
+            <h1 class="nav-text black-text">Bangladesh 2.0</h1>
             <button class="sign-in-btn">Sign In</button>
         </nav>
 
         <!-- Banner / Hero section -->
+        <section class="banner">
+            <!-- left div -->
+            <div class="text-container">
+                <h3 class="container-caption faded-black">Bangladesh 2.0</h3>
 
-        
+                <p class="hero-text black-text">
+                    Idea , innovation ,
+                    vision and challenges in New Bangladesh.
+                </p>
+
+                <button class="hero-btn">Explore New Bangladesh</button>
+
+            </div>
+            <!-- right div -->
+            <div class="header-visual">
+                <img src="assets/hero.png" alt="">
+            </div>
+
+        </section>
+
 
     </header>
 
