pillers of bangladesh section & requred css added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,56 @@
 
     <!-- ================================The Main Section================================== -->
     <main>
+        <!---------------------------------- Pillars-section ---------------------------------->
+        <section class="foundations-section">
+            <h1 class="pillars-header">Pillars of "Bangladesh 2.0"</h1>
+
+            <!-- vision & core values / pillars -->
+            <div class="pillars-card-container">
+                <!-- card-1 -->
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="card-name">Innovation</p>
+                    <p class="primary-text">Driving creative solutions for a progressive future and growth. </p>
+
+                </div>
+                <!-- card-2 -->
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="card-name">Sustainability</p>
+                    <p class="primary-text">Ensuring long-term environmental balance and resource preservation. </p>
+
+                </div>
+                <!-- card-3 -->
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="card-name">Infrastructure</p>
+                    <p class="primary-text">Building robust foundations for modern development and connectivity. </p>
+                </div>
+                <!-- card-4 -->
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <p class="card-name">Empowerment</p>
+                    <p class="primary-text">Enabling individuals and communities to achieve their fullest potential.
+                    </p>
+                </div>
+            </div>
+
+        </section>
+        <!---------------------------------- The visions-section ---------------------------------->
+
+        <section class="vision-BD">
+            <p class="pillars-header">The Vision of Future</p>
+
+            <p class="primary-text">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+
+            <!-- Vision cards -->
+
+        </section>
+
 
     </main>
 
