all main section HTML's with css stylings are added

--- a/index.html
+++ b/index.html
@@ -231,30 +231,44 @@
                 technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
                 energy, digital transformation, and robust infrastructure.</p>
 
-                <!-- pricing section -->
+            <!-- pricing section -->
 
-                <div class="pricing-display-container">
+            <div class="pricing-display-container">
 
-                    <div class="price-box">
-                        <p class="pricing">100Taka</p>
-                    </div>
-                    <div class="price-box light-green-shade">
-                        <p class="pricing">200Taka</p>
-                    </div>
-                    <div class="price-box">
-                        <p class="pricing">500Taka</p>
-                    </div>
-                    <div class="price-box">
-                        <p class="pricing">1000Taka</p>
-                    </div>
-
+                <div class="price-box">
+                    <p class="pricing">100Taka</p>
                 </div>
-                <!-- Input field -->
-                 <input type="number" name="" id="" placeholder="Other Amount (Taka)">
+                <div class="price-box light-green-shade">
+                    <p class="pricing">200Taka</p>
+                </div>
+                <div class="price-box">
+                    <p class="pricing">500Taka</p>
+                </div>
+                <div class="price-box">
+                    <p class="pricing">1000Taka</p>
+                </div>
 
-                 <button class="btn-primary dark-green-shade center">Donate now</button>
+            </div>
+            <!-- Input field -->
+            <input type="number" name="" id="" placeholder="Other Amount (Taka)">
+
+            <button class="btn-primary dark-green-shade center">Donate now</button>
         </section>
+        <!------------------------------------- News latter Section ------------------------------------->
+        <section class="news-latter-container">
 
+            <p class="pillars-header">
+                Subscribe Newsletter
+            </p>
+            <p class="primary-text">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth.
+            </p>
+            <input type="text" name="" id=""><button class="btn-subscribe">Subscribe</button>
+            <p class="primary-text">
+                We promise not to spam you!
+            </p>
+        </section>
 
     </main>
 
