Assignment complete: All codes in place, ready to impress (fingers crossed)

--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
                     <p class="card-name">Digital Transformation</p>
                     <p class="primary-text" style="margin-top: 40px;">Revolutionizing businesses with advanced
                         technologies, enhancing efficiency, and improving customer experiences.</p>
-                    <button class="learn-more-button-1 btn-primary">Learn more</button>
+                    <button class="learn-more-button-1">Learn more</button>
                 </div>
                 <div class="vision-card-2">
                     <p class="card-name">Green Energy</p>
                     <p class="primary-text" style="margin-top: 40px;">Harnessing renewable resources to power a
                         sustainable future, reducing carbon footprints globally.</p>
-                    <button class="learn-more-button-2 btn-primary">Learn more</button>
+                    <button class="learn-more-button-2">Learn more</button>
                 </div>
                 <div class="vision-card-3">
                     <p class="card-name">Modern Infrastructure</p>
                     <p class="primary-text" style="margin-top: 40px;">Developing smart cities with cutting-edge
                         facilities, promoting innovation and enhancing connectivity.</p>
-                    <button class="learn-more-button-3 btn-primary">Learn more</button>
+                    <button class="learn-more-button-3">Learn more</button>
                 </div>
             </div>
 
@@ -238,7 +238,7 @@
                 <div class="price-box">
                     <p class="pricing">100Taka</p>
                 </div>
-                <div class="price-box light-green-shade">
+                <div class="price-box common-green-shade">
                     <p class="pricing">200Taka</p>
                 </div>
                 <div class="price-box">
@@ -273,8 +273,14 @@
     </main>
 
     <!-- ================================The Footer Section================================== -->
-    <footer>
-
+    <footer class="footer">
+        <p class="pillars-header">Bangladesh 2.0</p>
+        <hr>
+        <div class="social-media-logo">
+            <img src="assets/facebook.png" alt="">
+            <img src="assets/\/instagram.png" alt="">
+            <img src="assets/x.png" alt="">
+        </div>
     </footer>
 </body>
 
